--- a/gte/foundations-of-product-management.html
+++ b/gte/foundations-of-product-management.html
@@ -1,4 +1,4 @@
-<div class="max-w-4xl mx-auto bg-white p-8 shadow-lg rounded-lg">
+<div class=" mx-auto bg-white p-8 shadow-lg rounded-lg">
         <h1 class="text-3xl font-semibold mb-6">Foundations of Product Management</h1>
 
         <section id="overview" class="mb-8">
