--- a/gte/foundations-of-product-management.html
+++ b/gte/foundations-of-product-management.html
@@ -1,9 +1,9 @@
-<div class=" mx-auto bg-white p-8 shadow-lg rounded-lg">
-        <h1 class="text-3xl font-semibold mb-6">Foundations of Product Management</h1>
+<div class=" mx-auto p-8 shadow-lg rounded-lg">
+        <h1 class="text-3xl font-semibold mb-6 text-gray-300">Foundations of Product Management</h1>
 
         <section id="overview" class="mb-8">
-            <h2 class="text-2xl font-semibold mb-4">Overview of the Role and Responsibilities</h2>
-            <p class="text-gray-700">Product management is a multifaceted role that carries significant responsibilities within an organization. Product managers serve as the driving force behind a product's success, guiding it from its conceptual stage to its launch and beyond. Their duties include:</p>
+            <h2 class="text-2xl text-white font-semibold mb-4">Overview of the Role and Responsibilities</h2>
+            <p class="text-white">Product management is a multifaceted role that carries significant responsibilities within an organization. Product managers serve as the driving force behind a product's success, guiding it from its conceptual stage to its launch and beyond. Their duties include:</p>
             <ul class="list-disc ml-8">
                 <li>Defining and articulating the product's vision and strategy.</li>
                 <li>Conducting market research to identify opportunities and threats.</li>
@@ -12,12 +12,12 @@
                 <li>Prioritizing features and enhancements based on business goals and user feedback.</li>
                 <li>Monitoring product performance, gathering user feedback, and adapting the product accordingly.</li>
             </ul>
-            <p class="text-gray-700 mt-4">The role of a product manager is dynamic and requires a deep understanding of both the product and the market it serves.</p>
+            <p class="text-white mt-4">The role of a product manager is dynamic and requires a deep understanding of both the product and the market it serves.</p>
         </section>
 
         <section id="importance" class="mb-8">
-            <h2 class="text-2xl font-semibold mb-4">Importance of Product Management in Business Strategy</h2>
-            <p class="text-gray-700">Product management plays a pivotal role in shaping an organization's business strategy. Its significance can be seen through various lenses:</p>
+            <h2 class="text-2xl text-white font-semibold mb-4">Importance of Product Management in Business Strategy</h2>
+            <p class="text-white">Product management plays a pivotal role in shaping an organization's business strategy. Its significance can be seen through various lenses:</p>
             <ul class="list-disc ml-8">
                 <li><strong>Alignment:</strong> Product managers ensure that product development aligns with the broader business strategy, ensuring that every product initiative contributes to the company's goals.</li>
                 <li><strong>Resource Optimization:</strong> They help allocate resources efficiently, focusing on projects with the highest potential ROI while avoiding costly distractions.</li>
@@ -25,12 +25,12 @@
                 <li><strong>Adaptability:</strong> In an ever-changing business landscape, product management enables organizations to adapt to shifting market dynamics and evolving customer preferences.</li>
                 <li><strong>Sustainability:</strong> By continually refining products based on user feedback, product managers contribute to long-term customer satisfaction and business growth.</li>
             </ul>
-            <p class="text-gray-700 mt-4">Without effective product management, businesses risk losing their competitive edge and missing opportunities for growth.</p>
+            <p class="text-white mt-4">Without effective product management, businesses risk losing their competitive edge and missing opportunities for growth.</p>
         </section>
 
         <section id="skills" class="mb-8">
-            <h2 class="text-2xl font-semibold mb-4">Key Skills for Product Managers</h2>
-            <p class="text-gray-700">Product managers require a diverse skill set to excel in their roles. These skills can be categorized into several essential areas:</p>
+            <h2 class="text-2xl text-white font-semibold mb-4">Key Skills for Product Managers</h2>
+            <p class="text-white">Product managers require a diverse skill set to excel in their roles. These skills can be categorized into several essential areas:</p>
             <ul class="list-disc ml-8">
                 <li><strong>Strategic Thinking:</strong> Product managers must think strategically to align their products with the overall business strategy and market needs. This involves setting a clear product vision, defining long-term goals, and making informed decisions that drive the product forward.</li>
                 <li><strong>Communication:</strong> Effective communication is paramount for product managers. They must convey the product's vision and roadmap to cross-functional teams, ensuring everyone is on the same page. Strong communication skills also come into play when gathering user feedback and explaining complex concepts to stakeholders.</li>
@@ -42,8 +42,8 @@
         </section>
 
         <section id="user-centric" class="mb-8">
-            <h2 class="text-2xl font-semibold mb-4">Fundamentals of Creating a User-Centric Product</h2>
-            <p class="text-gray-700">Building a user-centric product is the ultimate goal of product management. To achieve this, product managers should follow a set of fundamental principles:</p>
+            <h2 class="text-2xl text-white font-semibold mb-4">Fundamentals of Creating a User-Centric Product</h2>
+            <p class="text-white">Building a user-centric product is the ultimate goal of product management. To achieve this, product managers should follow a set of fundamental principles:</p>
             <ul class="list-disc ml-8">
                 <li><strong>User Research:</strong> Conduct thorough user research to gain insights into your target audience's needs, pain points, and preferences. This research forms the foundation for your product strategy.</li>
                 <li><strong>User Personas:</strong> Create detailed user personas that represent your target users. These personas help guide product development by ensuring that features and enhancements align with user needs.</li>
@@ -52,7 +52,7 @@
                 <li><strong>Feedback Loops:</strong> Establish feedback loops with users through surveys, user forums, and customer support channels. Actively listen to their feedback and use it to drive product enhancements.</li>
                 <li><strong>Cross-Functional Collaboration:</strong> Collaborate closely with design and engineering teams to ensure that user-centric principles are integrated into the product development process from the outset.</li>
             </ul>
-            <p class="text-gray-700 mt-4">By consistently focusing on the user and adapting the product to meet their needs, product managers can create products that are not only successful but also foster strong customer loyalty.</p>
+            <p class="text-white mt-4">By consistently focusing on the user and adapting the product to meet their needs, product managers can create products that are not only successful but also foster strong customer loyalty.</p>
         </section>
 
         <!-- Additional sections and content can be added here -->
