--- a/gte/foundations-of-product-management.html
+++ b/gte/foundations-of-product-management.html
@@ -1,7 +1,7 @@
 <div class=" mx-auto p-8 shadow-lg rounded-lg">
         <h1 class="text-3xl font-semibold mb-6 text-gray-300">Foundations of Product Management</h1>
 
-        <section id="overview" class="mb-8">
+        <section id="overview" class="mb-8 text-white">
             <h2 class="text-2xl text-white font-semibold mb-4">Overview of the Role and Responsibilities</h2>
             <p class="text-white">Product management is a multifaceted role that carries significant responsibilities within an organization. Product managers serve as the driving force behind a product's success, guiding it from its conceptual stage to its launch and beyond. Their duties include:</p>
             <ul class="list-disc ml-8">
@@ -15,7 +15,7 @@
             <p class="text-white mt-4">The role of a product manager is dynamic and requires a deep understanding of both the product and the market it serves.</p>
         </section>
 
-        <section id="importance" class="mb-8">
+        <section id="importance" class="mb-8 text-white">
             <h2 class="text-2xl text-white font-semibold mb-4">Importance of Product Management in Business Strategy</h2>
             <p class="text-white">Product management plays a pivotal role in shaping an organization's business strategy. Its significance can be seen through various lenses:</p>
             <ul class="list-disc ml-8">
@@ -28,7 +28,7 @@
             <p class="text-white mt-4">Without effective product management, businesses risk losing their competitive edge and missing opportunities for growth.</p>
         </section>
 
-        <section id="skills" class="mb-8">
+        <section id="skills" class="mb-8 text-white">
             <h2 class="text-2xl text-white font-semibold mb-4">Key Skills for Product Managers</h2>
             <p class="text-white">Product managers require a diverse skill set to excel in their roles. These skills can be categorized into several essential areas:</p>
             <ul class="list-disc ml-8">
@@ -41,7 +41,7 @@
             </ul>
         </section>
 
-        <section id="user-centric" class="mb-8">
+        <section id="user-centric" class="mb-8 text-white">
             <h2 class="text-2xl text-white font-semibold mb-4">Fundamentals of Creating a User-Centric Product</h2>
             <p class="text-white">Building a user-centric product is the ultimate goal of product management. To achieve this, product managers should follow a set of fundamental principles:</p>
             <ul class="list-disc ml-8">
